samples/_failures_safe/1761628103_2acf16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9af5cba0.c: In function ‘main’:
./samples/SAFE/__tmp_9af5cba0.c:168:5: error: expected expression at end of input
  168 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_9af5cba0.c:168:5: error: expected declaration or statement at end of input
